# history_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0f7d92e3888c_m2m.py  2cea75ad840c_nullablephotos.py  3967e569e6d2_string_id.py  70bac6d081f5_gallery.py
app/: conf.py  database.py  main.py  models.py  schemas.py
app/media/: __init__.py  service.py
