[project]
name = "historysait-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "boto3>=1.37.13",
    "fastapi>=0.115.11",
    "ipykernel>=6.29.5",
    "minio>=7.2.15",
    "prometheus-client>=0.21.1",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
